fix(perf): avoid layout shift with eager theme detection (#4)
* feat(theme): faster theme detection to avoid flicker

* fix: color harmony

* setup: ignore cache and workspace directories from HMR

--- a/src/styles/props/_adaptive.css
+++ b/src/styles/props/_adaptive.css
@@ -4,28 +4,28 @@
 
 	--site-background-body: hsl(240, 14%, 7%);
 	--site-background-showcase: hsl(240, 14%, 4%);
-	--site-background-code: hsl(240, 8%, 15%);
+	--site-background-code: hsl(240, 9%, 13%);
 	--site-background-selection: hsl(158, 100%, 14%);
-	--site-background-note: hsl(208, 21%, 12%);
-	--site-background-commend: hsl(152, 100%, 7%);
+	--site-background-note: hsl(208, 22%, 12%);
+	--site-background-commend: hsl(153, 100%, 8%);
 	--site-background-warn: hsl(29, 100%, 10%);
-	--site-background-deter: hsl(359, 100%, 13%);
+	--site-background-deter: hsl(359, 100%, 12%);
 	--site-background-assert: hsl(216, 100%, 14%);
 
-	--site-border-body: hsl(207, 17%, 25%);
-	--site-border-commend: hsl(160, 100%, 15%);
-	--site-border-warn: hsl(33, 100%, 19%);
+	--site-border-body: hsl(209, 17%, 25%);
+	--site-border-commend: hsl(158, 100%, 15%);
+	--site-border-warn: hsl(33, 100%, 18%);
 	--site-border-deter: hsl(357, 100%, 25%);
-	--site-border-assert: hsl(213, 91%, 30%);
+	--site-border-assert: hsl(213, 98%, 27%);
 
 	--site-color-text-c0: hsl(209, 15%, 66%);
 	--site-color-text: hsl(210, 15%, 74%);
 	--site-color-text-c1: hsl(212, 16%, 84%);
 	--site-color-text-c2: hsl(206, 16%, 81%);
-	--site-color-commend: hsl(154, 32%, 52%);
-	--site-color-warn: hsl(37, 100%, 44%);
-	--site-color-deter: hsl(359, 98%, 71%);
-	--site-color-assert: hsl(213, 100%, 66%);
+	--site-color-commend: hsl(154, 32%, 51%);
+	--site-color-warn: hsl(38, 100%, 43%);
+	--site-color-deter: hsl(0, 100%, 71%);
+	--site-color-assert: hsl(212, 100%, 68%);
 	--site-color-marker: hsl(208, 14%, 39%);
 	--site-color-scrollbar: hsl(209, 15%, 33%);
 
@@ -68,32 +68,32 @@
 [data-theme="light"] {
 	color-scheme: light;
 
-	--site-background-body: hsl(27, 100%, 98%);
-	--site-background-showcase: hsl(27, 100%, 100%);
-	--site-background-code: hsl(20, 64%, 90%);
-	--site-background-selection: hsl(148, 36%, 86%);
-	--site-background-note: hsl(210, 15%, 94%);
-	--site-background-commend: hsl(148, 31%, 93%);
-	--site-background-warn: hsl(33, 95%, 92%);
-	--site-background-deter: hsl(4, 100%, 95%);
-	--site-background-assert: hsl(208, 100%, 94%);
+	--site-background-body: hsl(43, 100%, 98%);
+	--site-background-showcase: hsl(43, 100%, 99%);
+	--site-background-code: hsl(20, 65%, 90%);
+	--site-background-selection: hsl(151, 33%, 78%);
+	--site-background-note: hsl(20, 72%, 93%);
+	--site-background-commend: hsl(149, 32%, 87%);
+	--site-background-warn: hsl(34, 100%, 90%);
+	--site-background-deter: hsl(5, 100%, 93%);
+	--site-background-assert: hsl(208, 100%, 91%);
 
-	--site-border-body: hsl(207, 15%, 75%);
-	--site-border-commend: hsl(151, 33%, 68%);
-	--site-border-warn: hsl(33, 96%, 64%);
-	--site-border-deter: hsl(3, 100%, 80%);
-	--site-border-assert: hsl(210, 100%, 76%);
+	--site-border-body: hsl(21, 17%, 68%);
+	--site-border-commend: hsl(153, 33%, 60%);
+	--site-border-warn: hsl(35, 85%, 59%);
+	--site-border-deter: hsl(2, 100%, 78%);
+	--site-border-assert: hsl(211, 100%, 72%);
 
-	--site-color-text-c0: hsl(208, 14%, 40%);
-	--site-color-text: hsl(209, 16%, 28%);
-	--site-color-text-c1: hsl(208, 18%, 18%);
-	--site-color-text-c2: hsl(210, 17%, 23%);
-	--site-color-commend: hsl(162, 100%, 24%);
-	--site-color-warn: hsl(35, 100%, 31%);
-	--site-color-deter: hsl(350, 100%, 40%);
-	--site-color-assert: hsl(214, 83%, 42%);
-	--site-color-marker: hsl(208, 14%, 64%);
-	--site-color-scrollbar: hsl(208, 12%, 51%);
+	--site-color-text-c0: hsl(208, 14%, 34%);
+	--site-color-text: hsl(209, 16%, 20%);
+	--site-color-text-c1: hsl(208, 18%, 10%);
+	--site-color-text-c2: hsl(210, 17%, 15%);
+	--site-color-commend: hsl(161, 100%, 20%);
+	--site-color-warn: hsl(34, 100%, 28%);
+	--site-color-deter: hsl(352, 100%, 35%);
+	--site-color-assert: hsl(214, 84%, 39%);
+	--site-color-marker: hsl(20, 11%, 57%);
+	--site-color-scrollbar: hsl(21, 27%, 58%);
 
 	--color-prettylights-syntax-comment: #6e7781;
 	--color-prettylights-syntax-constant: #0550ae;
