--- a/src/styles/website/_content.scss
+++ b/src/styles/website/_content.scss
@@ -207,7 +207,6 @@ article.wrapper-base {
 	--callout-border-color: var(--site-border-deter);
 }
 
-.callout-setup,
 .callout-assert {
 	--callout-background: var(--site-background-assert);
 	--callout-color: var(--site-color-assert);
